# nostr-api

./: .dockerignore  .drone.yml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.toml  config.yaml  index.html  openapi.yaml  snort.html
.github/workflows/: build.yml
src/: avatar.rs  cors.rs  events.rs  fetch.rs  link_preview.rs  main.rs  opengraph.rs  settings.rs  store.rs
work/: audit-fixes.md  audit-report.md
