[package]
name = "nostr_services_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
nostr-sdk = { version = "0.44" }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
config = { version = "0.15", features = ["yaml"] }
hex = "0.4"
scraper = "0.25"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
moka = { version = "0.12", features = ["future"] }
serde_json = "1"
